--- a/src/sass/_main.scss
+++ b/src/sass/_main.scss
@@ -69,5 +69,19 @@ main {
     }
   }
   // End Testimonials
+
+  // News
+  #news {
+    .wrapper {
+      cursor: pointer;
+      img {
+        transition: transform 0.7s ease-in-out;
+      }
+      &:hover img {
+        transform: scale(1.3);
+      }
+    }
+  }
+  // End News
 }
 // End Main
