--- a/src/sass/_main.scss
+++ b/src/sass/_main.scss
@@ -5,6 +5,13 @@
   background-repeat: no-repeat;
   background-size: cover;
 }
+// Nav
+nav {
+  li {
+    font-size: 20px;
+  }
+}
+// End Nav
 
 // Header
 header {
